--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             </ul>
         </nav>
 
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
 
     <main>
@@ -67,22 +69,22 @@
             <ul>
                 <li>
                     <img src="./images/ourteam-1.jpg" alt="Ігор Дем'яненко" width="270">
-                    <p>Ігор Дем'яненко</p>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/ourteam-2.jpg" alt="Ольга Рєпіна" width="270">
-                    <p>Ольга Рєпіна</p>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/ourteam-3.jpg" alt="Микола Тарасов" width="270">
-                    <p>Микола Тарасов</p>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/ourteam-4.jpg" alt="Михайло Єрмаков" width="270">
-                    <p>Михайло Єрмаков</p>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -94,9 +96,9 @@
 
         <address>
             <ul>
-                <li>м. Київ, пр-т Лесі Українки, 26</li>
-                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/LkWWDxqze2N2HtQS6">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
